# apps/api/openapi.json
@@ -6056,6 +6056,25 @@
         ]
       }
     },
+    "/graphql": {
+      "post": {
+        "operationId": "handle_http_post_graphql_post",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful Response"
+          }
+        },
+        "summary": "Handle Http Post",
+        "tags": [
+          "graphql"
+        ]
+      }
+    },
     "/health": {
       "get": {
         "operationId": "health_health_get",
